objects/Developer1__c/Developer1__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the locations of an organization.</description>
    <label>Developer1</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developers1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>