objects/Developer1__c/fields/Manager_1__c.field-meta.xml
<CustomField>
    <fullName>Manager_1__c</fullName>
    <description>This field stores the Name of the manager to which the Developer Reports to</description>
    <label>Reporting Manager</label>
    <referenceTo>Maanager_1__c</referenceTo>
    <relationshipLabel>Developers1</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>