objects/Developer1__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Developers1</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <type>Lookup</type>
</CustomField>