objects/Developer1__c/fields/Work_Location_1__c.field-meta.xml
<CustomField>
    <fullName>Work_Location_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Manager</description>
    <label>Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>Developers1</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <type>Lookup</type>
</CustomField>